<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_controller</name>
  <version>0.0.0</version>
  <description>Hand Controller using mediapipe models and ASL.</description>
  <maintainer email="grouby177@gmail.com">albertabeef</maintainer>
  <license>Apache License 2.0</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>      
  <exec_depend>cv_bridge</exec_depend>      
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>      
  <exec_depend>twist_stamper</exec_depend> 
  <exec_depend>turtlesim</exec_depend> 
    
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
